# Covenant

./: .env.template  .gitignore  CreditContract.wasm  README.md  deploy.js  go.work.sum  interact.js  package-lock.json  package.json
backend/: go.mod  go.sum  main.go
backend/config/: config.go
backend/controllers/: agent_controller.go  audit_controller.go  escrow_controller.go  market_controller.go  payment_controller.go
backend/database/: database.go
backend/mcp/: server.go
backend/middleware/: x402.go
backend/models/: models.go
backend/services/: gemini_service.go  swarm_service.go
backend/utils/: casper.go  casper_test.go
contracts/: .replit  Cargo.toml  Odra.toml  package-lock.json  package.json  pnpm-lock.yaml  replit.md  replit.nix
contracts/.agents/: agent_assets_metadata.toml
contracts/.agents/memory/: MEMORY.md  casper-odra-build.md
contracts/artifacts/mockup-sandbox/: mockupPreviewPlugin.ts  tsconfig.json
contracts/casper-contract/: Cargo.toml
contracts/casper-contract/.cargo/: config.toml
contracts/casper-contract/src/: lib.rs
contracts/casper-deploy/: DEPLOYMENT_RESULTS.md  ReputationContract.wasm  deploy.js  interact.js  package-lock.json  package.json
contracts/src/: lib.rs
docs/: ARCHITECTURE.md  ROADMAP.md
frontend/: deploy.js  package-lock.json  package.json  tailwind.config.js
frontend/public/: deploy.html
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: BrandingLockup.tsx  CasperEcosystemLogo.tsx  CovenantLogo.tsx  GlassPanel.tsx  LedgerOfTruth.tsx  MatrixOverlay.tsx  Sidebar.tsx  (+5 more)
(+3 files in other folders)
